# padsound

./: .gitignore  Cargo.toml  LICENSE  README.md  padsound.example.toml
.github/workflows/: ci.yml  release.yml
src/: command.rs  config.rs  lib.rs  main.rs  state.rs  terminal.rs
src/audio/: decoder.rs  engine.rs  mixer.rs  mod.rs  track.rs
src/input/: keyboard.rs  midi.rs  mod.rs
src/ui/: mod.rs  tui.rs
