[package]
name = "padsound"
version = "0.1.1"
edition = "2024"
description = "Linux/PipeWire audio trigger for live theatre use"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
cpal = "0.16"
crossbeam-channel = "0.5"
crossterm = "0.29"
midir = "0.10"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
toml = "0.9"
