[package]
name = "padsound"
version = "0.2.0"
edition = "2024"
description = "Linux/PipeWire audio trigger for live theatre use"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.16"
crossbeam-channel = "0.5"
crossterm = "0.29"
midir = "0.10"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5", features = ["all"] }
toml = "0.9"
